<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookUM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_buy_book_list">BuyBookListActivity</string>
    <string name="title_activity_sell_book_list">$ Sale Screen $</string>
    <string name="edit_contact_info">Enter your school email</string>
    <string name="edit_course_name">Enter the course name (Ex. CMSC131)</string>
    <string name="edit_textbook_name">Enter the name of your textbook</string>
    <string name="edit_swap">Swappable</string>
    <string name="edit_book_name">(Ex. Intro To Algorithms)</string>
    <string name="edit_sell">Sellable</string>
    <string name="edit_submit">submit</string>
    <string name="edit_amount">Enter amount in Dollars (Ex. 55)</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

    <string name="title_activity_successful_submit"></string>
    <string name="title_activity_book_search">BookSearchActivity</string>

</resources>
