<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bookum.SellBookListActivity" >

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_contact_info"
 		android:layout_alignParentTop="true"
 		
     />
    
    <EditText
        android:id="@+id/EditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_course_name"
        android:layout_below="@+id/EditText1"
     />
    
     <EditText
        android:id="@+id/EditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_textbook_name" 
        android:layout_below="@+id/EditText2"
      />
    
      <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_swap" 
        android:layout_below="@+id/EditText3"
      />
        
      <EditText
        android:id="@+id/EditText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_book_name"
        android:layout_toRightOf="@+id/checkBox1"
        android:layout_below="@+id/EditText3"
      />
      
      <CheckBox
       	android:id="@+id/checkBox2"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:hint="@string/edit_sell"
        android:layout_below="@+id/checkBox1"
      />
      
     
  		
      <EditText
          android:id="@+id/EditText5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/edit_amount"
          android:layout_toRightOf="@+id/checkBox2"
          android:layout_below="@+id/checkBox1"
          />
        
      
      
      
      
      <Button 
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:hint="@string/edit_submit"
        android:onClick="submitMessage"
      />
    
</RelativeLayout>